# block-ex

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  TASK.md  monero-wallet-rpc-docs.md  package-lock.json  package.json  rust-toolchain.toml  stagenet-local.sh
.sqlx/: query-032c7d54cc13d9a3b3e7011fc290e83f9cdf6e4d00efc4bce34db13b6a7b98da.json  query-05c9ca8936ebbafba52830219dfd1e43434596d711f76a54285441b83e17a39c.json  query-07dfac22beccd0ea0b5a1465f6aa9a2aa3ca5ee655ff8f2fe1a90620e2e60384.json  query-13d40d08b2522f31af418cbd97c43b9c9d90b61c7668ee1371275ed62f760572.json  query-1ea40b275507a918e792590f516032b4eda235617562dcea81a2398c1b02776e.json  query-28bc29a31e9d0f31f2a10803cc4d55315e21af4046e1b8b5b9cb4e71f2dfb9e7.json  query-2b471487135b34ac847656a0407e452b7784cfdc6f33cfe7f940c5724ed26ed1.json  query-361953289ba7704500d417c816df5f72a922c4fbe110a5bb5425a38870f06328.json  query-3c8b4d4731ce7e5d7f6a2dec9a36e2759568033e3c66647b6a45c2d79ac33b7b.json  query-3cc1d4a3745fd9074221354653d3cad8937fd7c6f00900105ef39e0f12e0b0a5.json  query-46019e6574ded7ac9cc48415c8b0a69bb73fce55921b49b0835781dbd837eee0.json  query-4c75c891ed14bd57c35a3957ffc38ddae3bb446b4cf5056cd00bd98acbf8c54c.json  query-4cd1de9ceec44650ea28477611047372ad8d42d2a7c0634264b9a5098e50ab44.json  query-4e438d6436bf59d9b50da17c597d0f3ab232229a41436889c1e03b0cffa77045.json  query-55004196db36de9abb925fed03d165804f2764986f2db887a501f63dd9009628.json  query-57d6bc28d65dedcdd974184c75ec1921f9362ff01e76aaefeb8b3d08b0267968.json  query-60379a47faa0af7674e992c1989d9d5f9670b7512ed256ac3a633f43ca27ba0d.json  query-6523570e707361025b90f70eb24b4bcea5b93ecdd479134fe328ad050bdf11c8.json  query-683b02348ae35c0f360a8d0e84f10557038cb607d5e5c4ee60566a8f912e8740.json  query-864f7e34942c43e5a1f35ce2fe080720785dfd8b2275b0256bd447cc3dce305d.json  query-8cda25d7b347ba0737a3c204fd1c9ad9953612fc5a8b52508aedac23f0f88c5b.json  query-8ff0b882ad569a0887d54fbdf9a821a141379a586bfb1a6e03e4e63ae627fc7a.json  query-946674cd4605c1e720691383e5eed9118b9b77e14bfb9874698a54d1c0dfb5cd.json  query-9afa7bc982d4082e916e17ae1d806f57b55a878aeaead9c0599f56cbf41dd63b.json  query-9cbe748441431cc28f19efcb8d8a3ca59adb623e323227dd1372bd4d2e8e9d43.json  query-a0464d5d2ec7253056aa894c7fc462a8bb69164c15d79702f1ae6f873226591b.json  query-a5ee4fc45217fb195a4aa42dc0444a5faa8fbc84e53f4dc06ef4ed3ae7048d51.json  query-a917d0aa6b85628c6ba24ac643b97d226bad0a771282819fe9662cdca3f1d211.json  query-ad1f1e03a63ef13c8fa83a50ad47d69f8a660d9e20d2c37076bc347fbeaa8260.json  query-b8e9b0988d297d8cce3f8d6ab76aa06bf47a79ceefed1c0926c484eb479b34a3.json  query-ccb2c940393213710ea2ab5e0eecf40b5082d04da92986fbe5d0381ebd253693.json  query-dbb983f0d15c2049ed054ecbc5bfcf4c34e486d8fbdef1cb9e5820c3bb22ab3a.json  query-dcfe585c59e8d80aed937c9e9f197f9be1714fb762238a1451863f45e836df38.json  query-ddce657de7869f8a0b0df0f59effcdcf518368d3bfc390813e81c2fe66030ddb.json  query-e7699e4de0ecfed3503fb5437da9d214d83d0e061126478288ed5be5d2555d88.json  query-f0cd8e6f746133cf3c75c4ba3cc85b33ce6ebb5b28acf32260dd8639d5f21013.json  query-fa3021822c9ffcb7d388a793ddabc6214c99f937c9e6011af7931e10b798b128.json
api/: Cargo.toml  openapi.yaml  types.gen.ts
api/src/: config.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs  util.rs
api/tests/: blocks_endpoints.rs  models_json.rs  search_fuzz.rs  tx_endpoints.rs
api/tests/snapshots/: blocks_endpoints__block_detail_min_height.snap  blocks_endpoints__blocks_pagination_window.snap
db/: README.md
db/migrations/: 0001_core.down.sql  0001_core.up.sql  0002_rings_mempool.down.sql  0002_rings_mempool.sql  0002_rings_mempool.up.sql  0003_softfacts_partman.down.sql  0003_softfacts_partman.sql  0003_softfacts_partman.up.sql  0004_checkpoint.down.sql  0004_checkpoint.sql  0004_checkpoint.up.sql  0005_chain_tips.down.sql  0005_chain_tips.sql  0005_chain_tips.up.sql  0006_block_finality.down.sql  0006_block_finality.sql  0006_block_finality.up.sql  0007_block_finality_backfill.down.sql  0007_block_finality_backfill.sql  0007_block_finality_backfill.up.sql  (+3 more)
docs/: dev-setup.md
ingestor/: Cargo.toml
ingestor/src/: analytics.rs  checkpoint.rs  cli.rs  codec.rs  fetch.rs  lib.rs  limits.rs  main.rs  mempool.rs  pipeline.rs  reorg.rs  rpc.rs  store.rs  work_block.rs  work_persist.rs  work_sched.rs  work_tx.rs
ingestor/tests/: adaptive_batch.rs  analytics_backfill.rs  analytics_gate.rs  cli_flags.rs  codec_golden.rs  limits.rs  pipeline_order.rs  reorg_healing.rs  rpc_integration.rs  soft_facts.rs
ingestor/tests/fixtures/: txs_three_blocks.json
ops/: Dockerfile.api  Dockerfile.ingestor  Dockerfile.postgres  Dockerfile.web  docker-compose.yml
web/: package-lock.json  package.json  vite.config.ts
(+16 files in other folders)
