[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.6", features = ["macros"] }
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
