[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full", "set-header", "timeout", "util"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros", "time", "uuid", "rust_decimal"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
sha2 = "0.10"
hex = "0.4"
time = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
serde_yaml = "0.9"
rust_decimal = "1.35"
http = "0.2"

[dev-dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
insta = { version = "1.40", features = ["json"] }
mini-redis = "0.4"
rand = "0.8"
