[package]
name = "ingestor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ingestor_bin"
path = "src/bin/ingestor.rs"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
clap = { version = "4.5.20", features = ["derive", "env"] }
futures = "0.3"
governor = "0.6"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
zmq = "0.10"

[dev-dependencies]
httpmock = "0.7"
rand = "0.8"
serial_test = "3.1"

[features]
integration = []
